# LCAR_Opencv

./: CMakeLists.txt  README.md
include/: yolo11.h
lib/rknn/include/: rknn_api.h
src/: main.cpp
